fixed annoying ugly scrollbar for auth settings!

--- a/src/app/sections/settings/settings.styles.less
+++ b/src/app/sections/settings/settings.styles.less
@@ -4,6 +4,7 @@
   justify-content: flex-start;
   align-items: center;
   width: 100%;
+  height: 100%;
   gap: 2em;
   padding-top: unset;
 }
